--- a/users/lucas/.config/alacritty.toml
+++ b/users/lucas/.config/alacritty.toml
@@ -8,6 +8,8 @@ decorations = "Full"
 decorations_theme_variant = "dark"
 
 [font]
+normal.family = "Fira Code Nerd Font Mono"
+normal.style = "Regular"
 size = 9.0
 
 [colors]
